--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "GOOD music generator.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,16 @@
   "homepage": "https://github.com/baker-0/Nu#readme",
   "dependencies": {
     "dotenv": "^7.0.0",
-    "eslint": "^5.15.3",
     "express": "^4.16.4",
     "spotify-web-api-node": "^4.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.15.3",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "nodemon": "^1.18.10"
   }
 }
