--- a/package.json
+++ b/package.json
@@ -1,36 +1,32 @@
 {
-  "name": "nu",
+  "name": "Nu",
   "version": "1.0.0",
-  "description": "GOOD music generator.",
-  "main": "app.js",
+  "description": "Playlist generator and Spotify listening history exploration tool.",
+  "main": ".eslintrc.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "postinstall": "run-p install:backend install:frontend",
+    "install:backend": "cd backend && npm install",
+    "install:frontend": "cd frontend  && npm install",
+    "start": "run-p start:backend start:frontend",
+    "start:backend": "npm run start --prefix backend",
+    "start:frontend": "npm run start --prefix frontend",
+    "build": "run-p build:backend build:frontend",
+    "build:backend": "cd backend && npm run build && cd ..",
+    "build:frontend": "cd frontend && npm run build && cd .."
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.0.2",
+    "opn-cli": "^3.1.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/baker-0/Nu.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/baker-0/Nu/issues"
   },
-  "homepage": "https://github.com/baker-0/Nu#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "spotify-web-api-node": "^4.0.0"
-  },
-  "devDependencies": {
-    "eslint": "^5.15.3",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "nodemon": "^1.18.10"
-  }
+  "homepage": "https://github.com/baker-0/Nu#readme"
 }
