--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
       - '3000:3000'
     volumes:
       - ./frontend:/usr/src/app/
+      - /usr/src/app/node_modules/
   db:
     image: mongo:4.0.10
     ports:
